Fix layout bug

--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -15,11 +15,10 @@
   clear: both;
   display: flex;
   color: $footer___color;
+  flex: 1 1 $footer___height;
   background: $footer___background;
   border-top: $footer___border-top;
   z-index: 1;
-  flex-basis: $footer___height;
-  align-items: center;
   justify-content: space-around;
   padding: 80px 0;
 
@@ -28,7 +27,8 @@
     display: flex;
     flex-direction: column;
     margin: 0 2%;
-    height: 100%;
+    flex: 1;
+    font-size: 12px;
 
     /* The footer section title */
     &__title {
